[package]
name = "docker_interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
cursive = "0.20.0"
cursive_table_view = "0.14"
fern = "0.6.2"
log = "0.4.21"
reqwest = { version = "0.12.4", features = ["json", "blocking"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37.0", features = ["full"] }
warp = "0.3.7"
